--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
             <div class="card now-playing-card">
                 <div class="card-header">
                     <div class="card-icon playing">
-                        <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f3b5.png" alt="🎵" class="emoji-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M9 18V5l12-2v13"/>
+                            <circle cx="6" cy="18" r="3"/>
+                            <circle cx="18" cy="16" r="3"/>
+                        </svg>
                     </div>
                     <h2>Now Playing</h2>
                     <div class="player-count" id="playerCountBadge">0 Active</div>
@@ -76,7 +80,10 @@
                 <div class="card-body">
                     <div class="tracks-container" id="tracksContainer">
                         <div class="empty-state">
-                            <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f615.png" alt="😕" class="emoji-big">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width:48px;height:48px;opacity:0.5">
+                                <circle cx="12" cy="12" r="10"/>
+                                <path d="M8 12h8M12 8v8"/>
+                            </svg>
                             <span>No track playing</span>
                         </div>
                     </div>
@@ -90,7 +97,12 @@
             <div class="card status-card">
                 <div class="card-header">
                     <div class="card-icon server">
-                        <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f5a5.png" alt="🖥️" class="emoji-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <rect x="2" y="2" width="20" height="8" rx="2"/>
+                            <rect x="2" y="14" width="20" height="8" rx="2"/>
+                            <circle cx="6" cy="6" r="1" fill="currentColor"/>
+                            <circle cx="6" cy="18" r="1" fill="currentColor"/>
+                        </svg>
                     </div>
                     <h2>Server Status</h2>
                 </div>
@@ -114,7 +126,9 @@
             <div class="card network-card">
                 <div class="card-header">
                     <div class="card-icon network">
-                        <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f4ca.png" alt="📊" class="emoji-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M22 12h-4l-3 9L9 3l-3 9H2"/>
+                        </svg>
                     </div>
                     <h2>Network Latency</h2>
                 </div>
@@ -137,7 +151,11 @@
             <div class="card memory-card">
                 <div class="card-header">
                     <div class="card-icon memory">
-                        <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f4be.png" alt="💾" class="emoji-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <rect x="4" y="4" width="16" height="16" rx="2"/>
+                            <rect x="8" y="8" width="8" height="8"/>
+                            <path d="M8 2v2M16 2v2M8 20v2M16 20v2M2 8h2M2 16h2M20 8h2M20 16h2"/>
+                        </svg>
                     </div>
                     <h2>Memory Usage</h2>
                 </div>
@@ -172,7 +190,11 @@
             <div class="card cpu-card">
                 <div class="card-header">
                     <div class="card-icon cpu">
-                        <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/26a1.png" alt="⚡" class="emoji-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <rect x="4" y="4" width="16" height="16" rx="2"/>
+                            <rect x="9" y="9" width="6" height="6"/>
+                            <path d="M9 1v3M15 1v3M9 20v3M15 20v3M1 9h3M1 15h3M20 9h3M20 15h3"/>
+                        </svg>
                     </div>
                     <h2>CPU Load</h2>
                 </div>
@@ -206,7 +228,12 @@
             <div class="card players-card">
                 <div class="card-header">
                     <div class="card-icon players">
-                        <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f3a4.png" alt="🎤" class="emoji-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                            <circle cx="9" cy="7" r="4"/>
+                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                            <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                        </svg>
                     </div>
                     <h2>Player Statistics</h2>
                 </div>
@@ -253,12 +280,14 @@
                 </div>
             </div>
 
+            <!-- SOURCE MANAGERS (DENGAN CUSTOM PNG EMOJI) -->
             <div class="card sources-card">
                 <div class="card-header">
-                    <div class="card-icon features">
-                        <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f4e5.png" alt="📥" class="emoji-icon">
+                    <div class="card-icon sources">
+                        <!-- Custom PNG Emoji untuk Source Nodelink -->
+                        <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f310.png" alt="🌐" class="emoji-icon">
                     </div>
-                    <h2>Sources</h2>
+                    <h2>Source Managers</h2>
                     <div class="source-count" id="sourceCount">0</div>
                 </div>
                 <div class="card-body">
@@ -268,11 +297,13 @@
                 </div>
             </div>
 
-            <!-- RESTORED: Music Filters -->
+            <!-- FILTER MUSIC (RESTORED) -->
             <div class="card filters-card">
                 <div class="card-header">
                     <div class="card-icon filters">
-                        <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f39b.png" alt="🎛️" class="emoji-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polygon points="22,3 2,3 10,12.46 10,19 14,21 14,12.46"/>
+                        </svg>
                     </div>
                     <h2>Audio Filters</h2>
                     <div class="filter-count" id="filterCount">0</div>
