--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <div class="card sources-card">
                 <div class="card-header">
                     <div class="card-icon sources">
-                        <img src="https://cdn3.emoji.gg/emojis/7024_windos_mediaPlayer.png" alt="🌐" class="emoji-icon">
+                        <img src="https://cdn3.emoji.gg/emojis/7024_windos_mediaPlayer.png" alt="Sources" class="emoji-icon">
                     </div>
                     <h2>Source Managers</h2>
                     <div class="source-count" id="sourceCount">0</div>
@@ -287,7 +287,7 @@
             </div>
         </section>
 
-        <!-- Now Playing Section (DIPINDAHKAN KE BAWAH) -->
+        <!-- Now Playing Section -->
         <section class="now-playing-section">
             <div class="card now-playing-card">
                 <div class="card-header">
@@ -320,7 +320,6 @@
             <div class="footer-content">
                 <span>Al Farrizi NodeLink Monitor</span>
                 <span class="separator">|</span>
-                <!-- Diubah ke 1s untuk menghindari DoS Protection block -->
                 <span>Refresh: 1s</span>
                 <span class="separator">|</span>
                 <span class="mono" id="refreshCount">Next: 1s</span>
@@ -331,5 +330,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
