--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <i class="fas fa-bars"></i>
     </button>
     <div class="mobile-logo">
-        <i class="fas fa-music"></i>
+        <img src="https://i.ibb.co.com/7xVkp1q2/Al-Farrizi.png" alt="Al Farrizi">
         <span>Al Farrizi</span>
     </div>
     <button class="theme-toggle-mobile" id="themeToggleMobile">
@@ -1189,6 +1189,7 @@
     <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
 
