--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,7 @@
                     </div>
                 </a>
 
-                <a href="https://status.alfarrizi.bot" target="_blank" class="support-card">
+                <a href="https://alfarrizi-status.instatus.com" target="_blank" class="support-card">
                     <div class="support-icon status">
                         <i class="fas fa-signal"></i>
                     </div>
@@ -1148,7 +1148,7 @@
                     </div>
                     <div class="support-content">
                         <h3>Saweria</h3>
-                        <p>Dukung kami melalui Saweria</p>
+                        <p>Support us through Saweria</p>
                     </div>
                     <div class="support-arrow">
                         <i class="fas fa-external-link-alt"></i>
@@ -1161,7 +1161,7 @@
                     </div>
                     <div class="support-content">
                         <h3>Tako</h3>
-                        <p>Berikan dukungan melalui Tako</p>
+                        <p>Provide support through Tako</p>
                     </div>
                     <div class="support-arrow">
                         <i class="fas fa-external-link-alt"></i>
@@ -1174,7 +1174,7 @@
                     </div>
                     <div class="support-content">
                         <h3>Trakteer</h3>
-                        <p>Traktir kami kopi melalui Trakteer</p>
+                        <p>Treat us to coffee through Trakteer</p>
                     </div>
                     <div class="support-arrow">
                         <i class="fas fa-external-link-alt"></i>
@@ -1412,3 +1412,4 @@
 </body>
 
 </html>
+
